src/objects/GDM_Table_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AUM__c</fullName>
        <label>AUM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <label>MDM ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>Org Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <label>Org Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PY_Red__c</fullName>
        <label>PY Red</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PY__c</fullName>
        <label>PY</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanId__c</fullName>
        <label>Plan Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanName__c</fullName>
        <label>Plan Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortfolioId__c</fullName>
        <label>Portfolio Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <label>Portfolio Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Vehicle__c</fullName>
        <label>Product Vehicle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShareClass__c</fullName>
        <label>Share Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Class_Id__c</fullName>
        <label>Share Class Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrategyId__c</fullName>
        <label>Strategy Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrategyName__c</fullName>
        <label>Strategy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleId__c</fullName>
        <label>Vehicle Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleName__c</fullName>
        <label>Vehicle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Net__c</fullName>
        <label>YTD Net</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Red__c</fullName>
        <label>YTD Red</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD__c</fullName>
        <label>YTD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GDM Table Fields</label>
</CustomObject>